other/restrict-pod-controller-serviceaccount-updates/.chainsaw-test/cronjob-bad-update.yaml
apiVersion: batch/v1
kind: CronJob
metadata:
  name: cronjob01
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          serviceAccountName: serviceaccount02
          containers:
          - name: busybox
            image: busybox:1.35
          restartPolicy: OnFailure
