other/restrict-pod-controller-serviceaccount-updates/.chainsaw-test/chainsaw-step-01-assert-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-pod-controller-serviceaccount-updates
status:
  ready: true
